--- a/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/13.xhtml
@@ -76,8 +76,9 @@
         <h:outputStylesheet library="css" name="/alumno/mapa-13.css"/>
         <div class="uk-section margen-superior uk-margin-small-left uk-margin-small-right">
             <div class="uk-container padding-contenedor fondo-13 uk-position-relative" >
-                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>#{alumno['map2.title.answered']}</span>
+                <h:panelGroup layout="block">
+                    <!--<span>#{alumno['map2.title.answered']}</span>-->
+                    <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="movimiento13 finalizado13" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
                 </h:panelGroup>
                 <h:graphicImage library="img" name="/mounstro/who.svg" styleClass="catarina-13"/>
                 <h:form id="formulario-mapamental" styleClass="uk-grid contenedor-formularios uk-visible@m" pt:uk-grid="">
