--- a/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/9.xhtml
@@ -77,8 +77,9 @@
         <h:outputStylesheet library="css" name="/alumno/mapa-idea.css"/>
         <div class="uk-section margen-superior">
             <div class="uk-container fondo-idea uk-position-relative margen-idea  ">
-                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span class="uk-text-capitalize">#{alumno['map2.title.answered']}</span>
+                <h:panelGroup layout="block">
+                    <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="movimiento9 finalizado9" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                    <!--<span class="uk-text-capitalize">#{alumno['map2.title.answered']}</span>-->
                 </h:panelGroup>
                 <p class="uk-position-absolute titulo-mapa-idea">#{alumno['map9.title.main']}</p>
                 <div class="uk-margin-small-top">
