--- a/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/2.xhtml
@@ -78,8 +78,9 @@
             <h1 class="uk-text-center titulo-mapa-2">#{alumno['map2.title.description']}</h1>
 
             <div class="uk-container fondo-mapa-efecto margen-mapa-efecto contenedor-efecto ">
-                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>#{alumno['map2.title.answered']}</span>
+                <h:panelGroup layout="block">
+                    <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="movimiento2 finalizado2" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                    <!--<span>#{alumno['map2.title.answered']}</span>-->
                 </h:panelGroup>
                 <div class="imagen-pez uk-margin-auto">
                     <h:graphicImage library="img" name="/alumno/pescado.svg"/>
