--- a/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/6.xhtml
@@ -76,8 +76,9 @@
         <h:outputStylesheet library="css" name="alumno/mapa-mental-historieta.css"/>
         <div class="uk-section margen-superior uk-margin-small-right uk-margin-small-left">
             <div  class="uk-container padding-contenedor fondo-6">
-                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>Respondido</span>
+                <h:panelGroup layout="block">
+                    <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="movimiento6 finalizado6" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                    <!--<span>Respondido</span>-->
                 </h:panelGroup>
                 <h:form id="formulñario-mapa-mental">
                     <h:panelGroup layout="block" styleClass=" contenedor-seis uk-grid " pt:uk-grid="">
