--- a/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/11.xhtml
@@ -76,8 +76,9 @@
         <h:outputStylesheet library="css" name="/alumno/mapa-secuencia.css"/>
         <div class="uk-section">
             <div class="uk-container  margen-superior color-fondo contenedor-padre margen-secuencia ">
-                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>#{alumno['map2.title.answered']}</span>
+                <h:panelGroup layout="block">
+                    <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="movimiento11 finalizado11" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                    <!--<span>#{alumno['map2.title.answered']}</span>-->
                 </h:panelGroup>
                 <div class="uk-visible@s">
                     <div class="imagen-secuencia">
