--- a/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/8.xhtml
@@ -76,8 +76,9 @@
         <h:outputStylesheet library="css" name="/alumno/mapa-capas.css"/>
         <div class="uk-section margen-superior">
             <div class="uk-container fondo-capas posicion-relativa">
-                <h:panelGroup layout="block" styleClass="realizado" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}">
-                    <span>Respondido</span>
+                <h:panelGroup layout="block">
+                    <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="movimiento8 finalizado8" rendered="#{not empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"/>
+                    <!--<span>Respondido</span>-->
                 </h:panelGroup>
                 <div class="imagen-who uk-visible@s">
                     <h:graphicImage library="img" name="mounstro/who.svg" />
