--- a/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
@@ -94,28 +94,28 @@
                 </ul>
 
                 <h:panelGroup layout="block" styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom" pt:uk-grid="">
-                    <ui:repeat value="#{actividadesControlador.actividadesModeloLista}" var="actividadModelo">
-                        <h:panelGroup layout="block" styleClass="uk-width-1-3@m #{actividadModelo.languageLevel}" pt:data-tags="a beautiful landscape - nature outdoor">
-                            <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border #{actividadModelo.languageLevel}">
+                    <ui:repeat value="#{bibliotecaLibreControlador.actividadModeloLista}" var="actividadModelo">
+                        <h:panelGroup layout="block" styleClass="uk-width-1-3@m #{actividadModelo.lenguaje}" pt:data-tags="a beautiful landscape - nature outdoor">
+                            <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border #{actividadModelo.lenguaje}">
                                 <div class="uk-card-header border-card">
                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
                                         <div class="uk-width-expand">
                                             <h:graphicImage styleClass="uk-border-circle" library="img" name="mounstro/3ojos.svg" width="30" height="30" />
-                                            <span class="cat-txt">#{actividadModelo.topic}</span>
+                                            <span class="cat-txt">#{actividadModelo.temaModelo.valor}</span>
                                         </div>
                                         <div class="uk-width-auto uk-text-right uk-text-muted">
-                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{actividadModelo.time}
+                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{actividadModelo.tiempo}
                                         </div>
                                     </h:panelGroup>
                                 </div>
                                 <div class="uk-card-media-top">
-                                    <div uk-spinner=""></div>
-                                    <div class="video">#{actividadModelo.idVideo}</div>
+                                    <div class="video" uk-spinner=""></div>
+                                    <img src="https://i.ytimg.com/vi/#{actividadModelo.idVideo}/mqdefault.jpg"/>
                                     <div class="video-error"><h:graphicImage library="img" name="video-error.svg" width="120" height="120"/> </div>
                                 </div>
                                 <div class="uk-card-body">
-                                    <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.question}</h6>
-                                    <p class="uk-text-small uk-text-muted ">#{actividadModelo.learnersType}</p>
+                                    <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.preguntaDetonadora}</h6>
+                                    <p class="uk-text-small uk-text-muted ">#{actividadModelo.puntaje}</p>
                                 </div>
                                 <div class="uk-card-footer">
                                     <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
