estilos a  mas actividades

--- a/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/more-activity.xhtml
@@ -120,7 +120,8 @@
                                         </div>
                                     </ui:repeat>
                                 </h:panelGroup>
-                                <h:outputText rendered="#{not empty tareaOracionesControlador.tareaOracionesModeloLista[0].respuesta}"/>
+                                <h:graphicImage library="img" name="/alumno/pop-art/boton-finished.svg" styleClass="fin-ordenar fin-movimiento" rendered="#{not empty tareaOracionesControlador.tareaOracionesModeloLista[0].respuesta}"/>
+                                <!--<h:outputText value="Respondido" rendered="#{not empty tareaOracionesControlador.tareaOracionesModeloLista[0].respuesta}"/>-->
                                 <h:inputHidden id="tareaOracionesInput" value="#{tareaOracionesControlador.respuestaOraciones}"/>
                                 <h:commandButton style="" onclick="getRespuestas()" styleClass="boton-enviar boton-trasladar uk-margin" value="Send" rendered="#{empty tareaOracionesControlador.tareaOracionesModeloLista[0].respuesta}">
                                     <f:ajax listener="#{tareaOracionesControlador.llenaDatos()}" execute="@form" onevent="function funcion(data) { respuestaEnvidad(data) }"/>
