--- a/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/14.xhtml
@@ -174,7 +174,7 @@
                                          value="#{boton['submit']}"
                                          rendered="#{empty mapaMentalControlador.tareaMapaMentalModeloLista[0].respuesta}"
                                          action="#{mapaMentalControlador.respondeMapaMental}"
-                                         styleClass="boton-enviar"/>
+                                         styleClass="boton-enviar boton-gral"/>
                     </h:form>
                 </div>
             </div>
