--- a/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/7.xhtml
@@ -91,7 +91,7 @@
                         <h3 class="titulo-mapa-7">#{alumno['map7.title.steps']}</h3>
                 </div>
                 <div class="uk-hidden@m">
-                    <h3 class="titulo-mapa-7 uk-text-center" style="color: black; ">#{alumno['map7.title.steps']}</h3>
+                    <h3 class="titulo-mapa-7 uk-text-center" style="color: black; background-color: white; border-radius: 8px; ">#{alumno['map7.title.steps']}</h3>
                 </div>
                 <div class="margen-contenido">
                     <h:form id="formulario-mapa-mental" class="uk-form-stacked">
