--- a/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/dashboard.xhtml
@@ -126,11 +126,11 @@
                     <h:form styleClass="formulario-tareas-progreso" >
                         <h:selectOneRadio value="#{tareasProgresoControlador.idTarea}"   >
                             <f:selectItems value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActividad"  itemLabel="#{tareaActividad.idActividad}" itemValue="#{tareaActividad.id}"/>
-                            <f:ajax event="change" listener="#{tareasProgresoControlador.buscaTareasRealizadas}" execute="@form" render="tareas"/>
+                            <f:ajax event="change" listener="#{tareasProgresoControlador.buscaTareasRealizadas}" execute="@form" render="tareas tareas2"/>
                         </h:selectOneRadio>
                     </h:form>
                     <ul>
-                        <li class="uk-margin-medium-left">
+                        <li class="">
                             <h:graphicImage styleClass="vacio" rendered="#{empty alumnoControlador.tareaActvidadModeloLista}" library="img" name="vacio.svg" pt:uk-svg=""/>
                             <h:panelGroup id="tareas" styleClass="fondo-comic5 uk-child-width-1-3@m uk-grid" pt:uk-grid="" rendered="#{not empty alumnoControlador.tareaActvidadModeloLista}">
                                 <div class="imagen-flexible">
@@ -196,6 +196,13 @@
                 </div>
             </div>
         </div>
+
+        <script type="application/javascript">
+            document.addEventListener("DOMContentLoaded", radio);
+            function radio() {
+                document.getElementById('j_idt63:j_idt64:0').click();
+            }
+        </script>
     </ui:define>
 </ui:composition>
 </html>
