--- a/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/free-library.xhtml
@@ -84,8 +84,8 @@
             <div data-uk-filter="target: .js-filter">
                 <ul class="uk-subnav nav-default-profesor uk-subnav-alumno uk-margin-medium-top">
                     <li class="uk-active" data-uk-filter-control=""><a href="#">Show All</a></li>
-                    <li data-uk-filter-control=".A1" ><a href="#">#{alumno['dashboard']}</a></li>
-                    <li data-uk-filter-control=".A1-A2" ><a href="#">Level A1-A2</a></li>
+                    <li data-uk-filter-control=".A1" ><a href="#">Level A1</a></li>
+                    <li data-uk-filter-control=".A1A2" ><a href="#">Level A1-A2</a></li>
                     <li data-uk-filter-control=".A2"><a href="#">Level A2</a></li>
                     <li data-uk-filter-control=".B1"><a href="#">Level B1</a></li>
                     <li data-uk-filter-control=".B2"><a href="#">Level B2</a></li>
@@ -93,56 +93,58 @@
                     <li data-uk-filter-control=".C2"><a href="#">Level C2</a></li>
                 </ul>
 
-                <h:panelGroup layout="block" styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom" pt:uk-grid="">
-                    <ui:repeat value="#{bibliotecaLibreControlador.actividadModeloLista}" var="actividadModelo">
-                        <h:panelGroup layout="block" styleClass="uk-width-1-3@m #{actividadModelo.lenguaje}" pt:data-tags="a beautiful landscape - nature outdoor">
-                            <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border #{actividadModelo.lenguaje}">
-                                <div class="uk-card-header border-card">
-                                    <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
-                                        <div class="uk-width-expand">
-                                            <h:graphicImage styleClass="uk-border-circle" library="img" name="mounstro/3ojos.svg" width="30" height="30" />
-                                            <span class="cat-txt">#{actividadModelo.temaModelo.valor}</span>
+                <ul  class="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom uk-child-width-1-3@m" uk-grid="">
+
+                        <ui:repeat value="#{bibliotecaLibreControlador.actividadModeloLista}" var="actividadModelo">
+                            <li class="#{actividadModelo.nivelLenguajeModeloLista[0].valor}">
+                                <h:panelGroup layout="block" styleClass="card-actividad #{actividadModelo.nivelLenguajeModeloLista[0].valor}" pt:data-tags="a beautiful landscape - nature outdoor" >
+                                    <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border ">
+                                        <div class="uk-card-header border-card">
+                                            <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-text-small" pt:uk-grid="">
+                                                <div class="uk-width-expand">
+                                                    <h:graphicImage styleClass="uk-border-circle" library="img" name="mounstro/3ojos.svg" width="30" height="30" />
+                                                    <ui:repeat value="#{actividadModelo.nivelLenguajeModeloLista}" var="lenguaje">
+                                                        <span class="cat-txt">#{lenguaje.valor}</span>
+                                                    </ui:repeat>
+                                                </div>
+                                                <div class="uk-width-auto uk-text-right uk-text-muted">
+                                                    <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{actividadModelo.tiempo}
+                                                </div>
+                                            </h:panelGroup>
+                                         </div>
+                                        <div class="uk-card-media-top">
+                                            <div class="video" uk-spinner=""></div>
+                                            <img src="https://i.ytimg.com/vi/#{actividadModelo.idVideo}/mqdefault.jpg"/>
+                                            <div class="video-error"><h:graphicImage library="img" name="video-error.svg" width="120" height="120"/> </div>
                                         </div>
-                                        <div class="uk-width-auto uk-text-right uk-text-muted">
-                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{actividadModelo.tiempo}
+                                        <div class="uk-card-body">
+                                            <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.preguntaDetonadora}</h6>
+                                            <p class="uk-text-small uk-text-muted ">#{actividadModelo.puntaje}</p>
                                         </div>
-                                    </h:panelGroup>
-                                </div>
-                                <div class="uk-card-media-top">
-                                    <div class="video" uk-spinner=""></div>
-                                    <img src="https://i.ytimg.com/vi/#{actividadModelo.idVideo}/mqdefault.jpg"/>
-                                    <div class="video-error"><h:graphicImage library="img" name="video-error.svg" width="120" height="120"/> </div>
-                                </div>
-                                <div class="uk-card-body">
-                                    <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">#{actividadModelo.preguntaDetonadora}</h6>
-                                    <p class="uk-text-small uk-text-muted ">#{actividadModelo.puntaje}</p>
-                                </div>
-                                <div class="uk-card-footer">
-                                    <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
-                                        <div class="uk-width-auto uk-text-small text-color-level1 uk-text-bold">
-                                            <h:panelGroup pt:uk-grid="" styleClass="uk-child-width-auto uk-grid uk-grid-small">
-                                                <!--<div><h:link styleClass="uk-link-reset"><h:outputText pt:uk-icon="icon: file-pdf" styleClass=""/></h:link></div>-->
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Download" styleClass="uk-icon-image uk-svg" library="img" name="icono/escuela.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Didactic Guide" styleClass="uk-icon-image uk-svg" library="img" name="icono/decarga.svg" /></div>
-                                                <!--<div><h:link styleClass="uk-link-reset"><h:outputText pt:uk-icon="icon: file-pdf" styleClass=""/></h:link></div>-->
+                                        <div class="uk-card-footer">
+                                            <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
+                                                <div class="uk-width-auto uk-text-small text-color-level1 uk-text-bold">
+                                                    <h:panelGroup pt:uk-grid="" styleClass="uk-child-width-auto uk-grid uk-grid-small">
+                                                        <button class="uk-button uk-button-primary uk-button-small uk-border-rounded">Ready!</button>
+                                                    </h:panelGroup>
+                                                </div>
+                                                <div class="uk-width-expand ">
+                                                    <div class="uk-grid uk-grid-small uk-child-width-1-5" uk-grid="">
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Transcript" styleClass="uk-icon-image uk-svg " library="img" name="icono/transcript1.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" /></div>
+                                                        <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" /></div>
+                                                    </div>
+                                                </div>
+
                                             </h:panelGroup>
                                         </div>
-                                        <div class="uk-width-expand ">
-                                            <div class="uk-grid uk-grid-small uk-child-width-1-5" uk-grid="">
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Transcript" styleClass="uk-icon-image uk-svg " library="img" name="icono/transcript1.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" /></div>
-                                                <div><h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" /></div>
-                                            </div>
-                                        </div>
-
-                                    </h:panelGroup>
-                                </div>
-                            </div>
-                        </h:panelGroup>
-                    </ui:repeat>
-                </h:panelGroup>
+                                    </div>
+                                </h:panelGroup>
+                            </li>
+                        </ui:repeat>
+                </ul>
             </div>
         </div>
         <h:outputScript library="js" name="/alumno/biblioteca-alumno.js"/>
