Dashboard Prfesor, muestra de forma

--- a/tecolotl-web/src/main/webapp/index.xhtml
+++ b/tecolotl-web/src/main/webapp/index.xhtml
@@ -13,6 +13,6 @@
 	<h:link value="Administracion" outcome="/administracion/dashboard.xhtml"/><br/>
 	<h:link value="Coordinador" outcome="/coordinador/dashboard.xhtml"/><br/>
 	<h:link value="Alumno" outcome="/alumno/inicio-sesion.xhtml"/><br/>
-	<h:link value="profesor" outcome="/profesor/dashboard-maestro.xhtml"/>
+	<h:link value="profesor" outcome="profesor"/>
 </h:body>
 </html>
