correcion mapas mentales

--- a/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mindmap/1.xhtml
@@ -75,8 +75,7 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-mental.css"/>
         <h:outputStylesheet library="css" name="letra.css"/>
-            <div class="padding-superior ">
-                <div class="">
+            <div class="uk-section margen-superior ">
                     <div class="uk-container uk-container-small fondo-mapa contorno">
                         <div class="titulo-mapa-uno">
                                 <span class=" uk-text-uppercase">THE 5 W's CHART</span>
@@ -187,7 +186,6 @@
                                              styleClass="boton-enviar boton-gral5"/>
                         </h:form>
                     </div>
-                </div>
             </div>
     </ui:define>
 </ui:composition>
