Desarrollando el admin-alumno.js

--- a/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
+++ b/tecolotl-web/src/main/webapp/profesor/admin-alumnos.xhtml
@@ -42,6 +42,7 @@
                 <div class="uk-container uk-container-small uk-grid uk-child-width-1-1@s uk-hidden@m" >
                     <div class="contenedor-imagen-alumnos uk-flex uk-flex-center"> <h:graphicImage styleClass="uk-border-circle" library="img" name="3ojos.svg" width="70" height="70"/></div>
                     <div class="uk-text-center"><h1 class="letra-cards lescuadron ">Student Administration</h1></div>
+                    <button>+</button>
                 </div>
                 <h5 class="uk-text-capitalize uk-text-bold uk-margin-remove-bottom titulo-section">Alumnos de la clase</h5>
                 <h:form id="formulario-tabla-alumno">
